--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,45 +14,15 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-#
 
-# Basic Airflow cluster configuration for CeleryExecutor with Redis and PostgreSQL.
-#
-# WARNING: This configuration is for local development. Do not use it in a production deployment.
-#
-# This configuration supports basic configuration using environment variables or an .env file
-# The following variables are supported:
-#
-# AIRFLOW_IMAGE_NAME           - Docker image name used to run Airflow.
-#                                Default: apache/airflow:2.8.4
-# AIRFLOW_UID                  - User ID in Airflow containers
-#                                Default: 50000
-# AIRFLOW_PROJ_DIR             - Base path to which all the files will be volumed.
-#                                Default: .
-# Those configurations are useful mostly in case of standalone testing/running Airflow in test/try-out mode
-#
-# _AIRFLOW_WWW_USER_USERNAME   - Username for the administrator account (if requested).
-#                                Default: airflow
-# _AIRFLOW_WWW_USER_PASSWORD   - Password for the administrator account (if requested).
-#                                Default: airflow
-# _PIP_ADDITIONAL_REQUIREMENTS - Additional PIP requirements to add when starting all containers.
-#                                Use this option ONLY for quick checks. Installing requirements at container
-#                                startup is done EVERY TIME the service is started.
-#                                A better way is to build a custom image or extend the official image
-#                                as described in https://airflow.apache.org/docs/docker-stack/build.html.
-#                                Default: ''
-#
-# Feel free to modify this file to suit your needs.
 ---
 x-airflow-common:
   &airflow-common
-  # In order to add custom dependencies or upgrade provider packages you can use your extended image.
-  # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
-  # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.8.4}
   # build: .
   environment:
     &airflow-common-env
+    AIRFLOW_UID: '5000'
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
@@ -74,6 +44,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - ${AIRFLOW_PROJ_DIR:-.}/tests:/opt/airflow/tests
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -81,6 +52,15 @@ x-airflow-common:
       condition: service_healthy
     postgres:
       condition: service_healthy
+
+x-superset-env: &superset-env
+  SUPERSET_SECRET_KEY: my_secret_key_14
+x-superset-image: &superset-image apache/superset:latest
+x-superset-volumes:
+  &superset-volumes 
+  - ${AIRFLOW_PROJ_DIR:-.}/docker:/docker
+  - superset_home:/app/superset_home
+
 
 services:
   postgres:
@@ -106,14 +86,27 @@ services:
     ports:
       - 9090:8080
 
-  superset:
-    image: apache/superset:latest
+  superset-init:
+    image: *superset-image
     platform: linux/amd64
-    environment:
-      SUPERSET_SECRET_KEY: my_secret_key_14
-    ports:
-      - 8091:8088
+    user: "root"
+    env_file: docker/.env
+    command: ["/docker/superset-init.sh"]
+    volumes: *superset-volumes
       
+  superset:
+    depends_on: 
+      superset-init:
+        condition: service_completed_successfully
+    image: *superset-image
+    platform: linux/amd64
+    user: "root"
+    restart: unless-stopped
+    env_file: docker/.env
+    ports:
+      - 8088:8088
+    volumes: *superset-volumes
+
   redis:
     image: redis:latest
     expose:
@@ -297,3 +290,5 @@ services:
 
 volumes:
   postgres-db-volume:
+  superset_home:
+    external: false
